--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@yummy/dotenv",
   "version": "1.0.0",
   "description": "A yummy dotenv library",
-  "main": "src/index.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
