--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "@yummy/dotenv",
   "version": "1.0.0",
   "description": "A yummy dotenv library",
-  "main": "index.js",
-  "author": "rudionrails",
+  "main": "dist/dotenv.js",
+  "source": "src/index.js",
+  "author": "Rudolf Schmidt <hello@rudionrails.com>",
   "license": "MIT",
   "homepage": "https://github.com/rudionrails/yummy-dotenv",
   "repository": {
@@ -13,6 +14,10 @@
   "bugs": {
     "url": "https://github.com/rudionrails/yummy-dotenv/issues"
   },
+  "files": [
+    "src",
+    "dist"
+  ],
   "keywords": [
     "dotenv",
     "env",
@@ -23,9 +28,16 @@
     "settings"
   ],
   "scripts": {
+    "build": "microbundle --compress=false --sourcemap=false",
+    "dev": "microbundle watch --compress=false",
+    "prebuild": "rm -rf ./dist",
+    "prepublish": "npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
     "dotenv": "^6.0.0"
+  },
+  "devDependencies": {
+    "microbundle": "^0.6.0"
   }
 }
