--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "dev": "microbundle watch --compress=false",
     "prebuild": "rm -rf ./dist",
     "prepublish": "npm run build",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "ava"
   },
   "dependencies": {
     "dotenv": "^6.0.0"
