--- a/package.json
+++ b/package.json
@@ -31,13 +31,13 @@
     "build": "rollup -c",
     "prebuild": "rm -rf ./dist",
     "prepublishOnly": "npm run build",
-    "test": "ava"
+    "test": "jest"
   },
   "dependencies": {
     "dotenv": "^6.0.0"
   },
   "devDependencies": {
-    "ava": "^0.25.0",
+    "jest": "^23.5.0",
     "rollup": "^0.64.1",
     "rollup-plugin-commonjs": "^9.1.5",
     "rollup-plugin-node-resolve": "^3.3.0"
