Better handling for env variables

--- a/test/fixtures/.env.variables
+++ b/test/fixtures/.env.variables
@@ -1,5 +1,5 @@
-FOO=foo-env
-BAR="${FOO}@${BAZ}/${XYZ}"
-BAZ=baz-env
+ABC=$NOOP/${NOOP}
 
-ABC="${NOOP}"
+FOO=foo-env
+BAR=${FOO}@${BAZ}/${XYZ}
+BAZ=baz-env
