--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   ],
   "scripts": {
     "build": "rollup -c",
+    "lint": "eslint . --ignore-path .gitignore",
     "prebuild": "rm -rf ./dist",
     "prepublishOnly": "npm run build",
     "test": "jest"
@@ -37,6 +38,10 @@
     "dotenv": "^6.0.0"
   },
   "devDependencies": {
+    "eslint": "^5.4.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jest": "^21.22.0",
     "jest": "^23.5.0",
     "rollup": "^0.64.1",
     "rollup-plugin-commonjs": "^9.1.5",
