--- a/package.json
+++ b/package.json
@@ -40,11 +40,14 @@
   "devDependencies": {
     "eslint": "^5.9.0",
     "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-config-prettier": "^4.0.0",
     "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jest": "^21.27.2",
-    "jest": "^23.6.0",
-    "rollup": "^0.64.1",
+    "eslint-plugin-jest": "22",
+    "eslint-plugin-prettier": "^3.0.1",
+    "jest": "24",
+    "prettier": "^1.16.4",
+    "rollup": "1.2",
     "rollup-plugin-commonjs": "^9.2.0",
-    "rollup-plugin-node-resolve": "^3.4.0"
+    "rollup-plugin-node-resolve": "4.0"
   }
 }
