--- a/package.json
+++ b/package.json
@@ -46,8 +46,6 @@
     "eslint-plugin-prettier": "^3.0.1",
     "jest": "24",
     "prettier": "^1.18.2",
-    "rollup": "1.2",
-    "rollup-plugin-commonjs": "^9.3.4",
-    "rollup-plugin-node-resolve": "^4.2.4"
+    "rollup": "1.2"
   }
 }
