--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "@yummy/dotenv",
   "version": "3.4.4",
   "description": "A yummy dotenv library",
-  "main": "dist/dotenv.js",
-  "module": "dist/dotenv.m.js",
+  "main": "index.js",
   "author": "Rudolf Schmidt <hello@rudionrails.com>",
   "license": "MIT",
   "homepage": "https://github.com/rudionrails/yummy-dotenv",
@@ -14,10 +13,6 @@
   "bugs": {
     "url": "https://github.com/rudionrails/yummy-dotenv/issues"
   },
-  "files": [
-    "src",
-    "dist"
-  ],
   "keywords": [
     "dotenv",
     "env",
@@ -28,10 +23,9 @@
     "settings"
   ],
   "scripts": {
-    "build": "rollup -c",
     "lint": "eslint . --ignore-path .gitignore",
-    "prebuild": "rm -rf ./dist && npm run lint && npm test",
-    "prepublishOnly": "npm run build",
+    "prerelease": "npm run lint && npm run test",
+    "release": "standard-version",
     "test": "jest"
   },
   "dependencies": {
@@ -46,6 +40,6 @@
     "eslint-plugin-prettier": "^3.0.1",
     "jest": "24",
     "prettier": "^1.18.2",
-    "rollup": "1.2"
+    "standard-version": "^7.0.1"
   }
 }
