--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@yummy/dotenv",
-  "version": "3.4.6",
+  "version": "3.4.7",
   "description": "A yummy dotenv library",
   "main": "index.js",
   "author": "Rudolf Schmidt <hello@rudionrails.com>",
@@ -31,20 +31,18 @@
     "lint": "eslint . --ignore-path .gitignore",
     "prerelease": "npm run lint && npm run test",
     "release": "standard-version",
-    "test": "jest"
+    "test": "nyc ava"
   },
   "dependencies": {
-    "dotenv": "^6.2.0"
+    "dotenv": "^8.2.0"
   },
   "devDependencies": {
-    "eslint": "^5.16.0",
-    "eslint-config-airbnb-base": "^13.2.0",
-    "eslint-config-prettier": "^4.0.0",
-    "eslint-plugin-import": "^2.18.0",
-    "eslint-plugin-jest": "^22.7.2",
-    "eslint-plugin-prettier": "^3.0.1",
-    "jest": "24",
-    "prettier": "^1.18.2",
-    "standard-version": "^7.0.1"
+    "ava": "^3.7.0",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.10.1",
+    "eslint-plugin-prettier": "^3.1.3",
+    "nyc": "^15.0.1",
+    "prettier": "^2.0.4",
+    "standard-version": "^7.1.0"
   }
 }
